Added Dwolla and Plaid environment

--- a/.env.example
+++ b/.env.example
@@ -11,11 +11,11 @@ APPWRITE_TRANSACTION_COLLECTION_ID=
 NEXT_APPWRITE_KEY=
 
 #PLAID
-PLAID_CLIENT_ID=
-PLAID_SECRET=
-PLAID_ENV=
-PLAID_PRODUCTS=
-PLAID_COUNTRY_CODES=
+PLAID_CLIENT_ID=66d0da0190096b001a9576cb
+PLAID_SECRET=66d0da0190096b001a9576cb
+PLAID_ENV=sandbox
+PLAID_PRODUCTS= auth, transactions, identity
+PLAID_COUNTRY_CODES= US,CA
 
 #DWOLLA
 DWOLLA_KEY=
